--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hardik Bachhan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
