--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
